# libvegan

./: CMakeLists.txt  Makefile  README  premake5.lua
examples/: CMakeLists.txt  ls.cpp  sort.cpp  wc.cpp
include/vegan/: bsearch.h  bytes.h  bytes_ref.h  c_string.h  exception.h  fdport.h  file.h  file_input_port.h  file_output_port.h  file_port.h  fs.h  holder_ptr.h  input_buffer.h  input_port.h  io_buffer.h  io_error.h  memory.h  output_buffer.h  output_port.h  pair.h  partition.h  quicksort.h  rune.h  sort.h  span.h  stack.h  stdio.h  string.h  string_buf.h  string_io.h  string_output_port.h  string_ref.h  string_utils.h  type_traits.h  types.h  unique_ptr.h  utf8.h  utils.h  vector.h  vector_buf.h  (+3 more)
include/vegan/platform/: fs.h  io.h
src/: bytes.cpp  bytes_ref.cpp  c_string.cpp  fdport.cpp  file.cpp  file_input_port.cpp  file_output_port.cpp  file_port.cpp  fs.cpp  input_buffer.cpp  input_port.cpp  io_buffer.cpp  ls.cpp  memory.cpp  output_buffer.cpp  output_port.cpp  platform.cpp  runetype.cpp  stdio.cpp  string.cpp  string_buf.cpp  string_io.cpp  string_output_port.cpp  string_ref.cpp  to_string.cpp  utf8.cpp  xml.cpp
src/platform/: alloc.cpp  alloc.h  fs.cpp  io.cpp  io.h
tests/: CMakeLists.txt  bytes.cpp  bytes_ref.cpp  holder_ptr.cpp  memory.cpp  output_buffer.cpp  partition.cpp  quicksort.cpp  sorted.cpp  span.cpp  stdio.cpp  string.cpp  string_io.cpp  string_output_port.cpp  unique_ptr.cpp  utf8.cpp  xml.cpp
